--- a/services/services.html
+++ b/services/services.html
@@ -29,7 +29,7 @@
             </nav>
             <nav class="desktop-nav" style="display: none;">
                    <ul>
-                    <li class="navigation-link"><a href="/home/home.html" >Home</a></li>
+                    <li class="navigation-link"><a href="/home/index.html" >Home</a></li>
                     <li class="navigation-link"><a href="/contact/contact.html" >Book now</a></li>
                     <li class="navigation-link"><a href="/services/services.html" >services</a></li>
                 </ul>
@@ -47,9 +47,7 @@
                 <p>
                     Move freer.think clearer. intake the beauty of life. Your body desires natural remedial relief and not fast painkillers. 
 
-                    Through small precariously placed incisions draw out what your body has been holding onto. Stress, pain, fatigue tightness. 
-
-                    The body goes through a process of natural healing, promoted by the natural blood flow hijama invokes.
+                   
 
                 </p>
 
@@ -58,7 +56,7 @@
 
             <section class="packages">
                 <h2>Our Packages</h2>
-                <p>Explore our package deals, designed by our skillful hands to target your sore pains</p>
+                <p>Explore our package deals, tailored by our skillful hands to target your sore pains</p>
                 <div class="packages-wrapper">
                     <div class="package low">
                         <h3>Targeted Relief</h3>
