fixed index html

--- a/services/services.html
+++ b/services/services.html
@@ -29,7 +29,7 @@
             </nav>
             <nav class="desktop-nav" style="display: none;">
                    <ul>
-                    <li class="navigation-link"><a href="/home/index.html" >Home</a></li>
+                    <li class="navigation-link"><a href="/index.html" >Home</a></li>
                     <li class="navigation-link"><a href="/contact/contact.html" >Book now</a></li>
                     <li class="navigation-link"><a href="/services/services.html" >services</a></li>
                 </ul>
