fixed wording and desktop

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -65,7 +65,7 @@
 
                     <section class="chat box">
                     <img src="/images/whatsapp-svgrepo-com.svg" alt="whatsao-icon">
-                    <h2>Message us on whatsap</h2>
+                    <h2>Message us on whatsapp</h2>
                     <p>Fast replies and no hassle </p>
                     <button>Chat with us!</button>
 
@@ -81,8 +81,8 @@
             <img class="logo" src="/images/logo.jpg" alt="">
             <p>Follow us</p>
             <div class="socials">
-                <a href="https://www.instagram.com/lutoncupping/?igsh=eTkybjI2MXo1aGI%3D#"><img src="/images/instagram-svgrepo-com.svg" alt=""></a>
-                <a href="http://facebook.com/people/Luton-Cupping/61570761802309/?_rdr"><img src="/images/facebook-176-svgrepo-com.svg" alt=""></a>
+                <a aria-label="link to instagram" href="https://www.instagram.com/lutoncupping/?igsh=eTkybjI2MXo1aGI%3D#"><img src="/images/instagram-svgrepo-com.svg" alt=""></a>
+                <a aria-label="link to facebook" href="http://facebook.com/people/Luton-Cupping/61570761802309/?_rdr"><img src="/images/facebook-176-svgrepo-com.svg" alt=""></a>
             </div>
         </footer>
 
