--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/home/home.css">
     <link rel="stylesheet" href="/navbar.css">
     <script src="/hamburger.js" defer></script>
     <script src="/animation.js" defer ></script>
@@ -24,7 +24,7 @@
                 <img class= "burger"src="/images/burger.svg" alt="hamburger-menu">
                 <ul class = "nav-list">
                     <li><img class="cross" src="/images/cross.svg" alt=""></li>
-                    <li class="navigation-link "><a href="/index.html" >Home</a></li>
+                    <li class="navigation-link "><a href="index.html" >Home</a></li>
                     <li class="navigation-link"><a href="/contact/contact.html" >Book now</a></li>
                     <li class="navigation-link"><a href="/services/services.html" >Services</a></li>
                 </ul>
@@ -118,10 +118,10 @@
                 <section class="what-is-hijama">
                 <h2>Hijama</h2>
                 <p>
-                    Your body naturally accumulates all types of waste. Mental fatigue, aches and sores. Over time these stack up and weigh you down in your mind and body. This is where Hijama comes into play
+                     When it comes to stress, deadlines and fatigue, sometimes its not only your mind which carries the burden, your body too carries it all in a bundle, waiting to be release. <br>  Hijama is more the just therapy -  Its the body’s <em>natural</em> restart button.
                 </p>
                 <p>
-                    Hijama is more the just therapy -  Its the body’s natural restart button
+                    With Hijama, natural blood flow is promoted, aiding in easier mobility, a release of tension and an overall boost in immune system. Hijama also relieves...
                 </p>
                 <div class="injuries">
                     <ul>
