--- a/services/services.html
+++ b/services/services.html
@@ -45,7 +45,7 @@
             <section class="hero">
                 <h1>Our services</h1>
                 <p>
-                    Move freer.think clearer. intake the beauty of life. Your body desires natural remedial relief and not fast painkillers. 
+                    Move freer and  think clearer. Your body desires natural remedial relief and not fast painkillers. 
 
                    
 
@@ -109,7 +109,7 @@
                 <h2>Want more?</h2>
                 <p>Below is a list of all of the  accredited services we offer , choose and add them together in a way which target you best </p>
                 <div class="list-of-services">
-                      <ul>
+                      <ul class="actual-list">
                     <li>Wet Cupping </li>
                     <li>Fire Cupping </li>
                     <li>Cupping Massage </li>
