--- a/services/services.html
+++ b/services/services.html
@@ -20,7 +20,7 @@
                 <img class= "burger"src="/images/burger.svg" alt="hamburger-menu">
                 <ul class = "nav-list">
                     <li><img class="cross" src="/images/cross.svg" alt=""></li>
-                    <li class="navigation-link "><a href="/home/home.html" >Home</a></li>
+                    <li class="navigation-link "><a href="/index.html" >Home</a></li>
                     <li class="navigation-link"><a href="/contact/contact.html" >Book now</a></li>
                     <li class="navigation-link"><a href="/services/services.html" >Services</a></li>
                 </ul>
