changed according to client req

--- a/services/services.html
+++ b/services/services.html
@@ -15,7 +15,7 @@
             
                 <img class="logo"src="/images/logo.jpg" alt="Luton cupping logo">
             
-            <p>Luton Cupping Services</p>
+            <p>Luton Cupping</p>
             <nav class="mobile-nav" >
                 <img class= "burger"src="/images/burger.svg" alt="hamburger-menu">
                 <ul class = "nav-list">
