fixed again cuz of client

--- a/services/services.html
+++ b/services/services.html
@@ -65,6 +65,7 @@
                             <li>Therapy Gun Massage</li>
                             <li>Dry or Wet Cupping (Hijama) 5 Cups</li>
                             <li>Herbal Antiseptic Application (e.g Arm / Leg)</li>
+                            <li>focused on one limb</li>
                             
                         </ul>
                         <p>Best for targeted pain relief</p>
@@ -95,6 +96,7 @@
                             <li>Therapy Gun Massage </li>
                             <li>Cupping massage</li>
                             <li>Full body wet cupping (hijama)</li>
+                            <li>Premium herbal aftercare</li>
                             <li>Premium herbal aftercare</li>
                         </ul>
                          <p>Perfect for a complete rejuvination & detox experience </p>
