fixed typo for infared therapy

--- a/services/services.html
+++ b/services/services.html
@@ -96,7 +96,7 @@
                             <li>Therapy Gun Massage </li>
                             <li>Cupping massage</li>
                             <li>Full body wet cupping (hijama)</li>
-                            <li>Premium herbal aftercare</li>
+                            <li>Infared therapy for ultimate relaxation</li>
                             <li>Premium herbal aftercare</li>
                         </ul>
                          <p>Perfect for a complete rejuvination & detox experience </p>
